2006-04-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add support for an
	  additional layout mode, which is similar to the list view in Windows
	  Explorer and lays out items in columns instead of rows, based on a
	  patch from Matt McClinch <mattmcclinch@gmail.com>.
	* docs/reference/: Update API docs.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.

2006-04-11	Benedikt Meurer <benny@xfce.org>

	* python/pyexo.h: Work-around compile problem when glibc headers are
	  included before Pythons config file.

2006-04-11	Benedikt Meurer <benny@xfce.org>

	* python/: Update the Python bindings, including exo-url, exo-execute
	  and exo-binding. Update the Python examples.

2006-04-10	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_press_event),
	  exo/exo-icon-view.c(exo_icon_view_single_click_timeout): Apply patch
	  from Matt McClinch <mattmcclinch@gmail.com> to further improve
	  Shift-selection handling.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
	  is set).

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, exo/exo-tree-view.{c,h}, exo/exo.symbols:
	  Add "single-click-timeout" properties to ExoIconView and ExoTreeView,
	  which control the delay after which the item under the mouse pointer
	  is automatically selected. Bug #1509.
	* docs/reference/: Update API documentation.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_select_all_between), THANKS:
	  Apply patch to improve shift-selection in the icon view, from
	  Matt McClinch <mattmcclinch@gmail.com>.

2006-04-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Do not depend on Xfce 4.2.2, as 4.2.1 will also do.
	* configure.in.in: Solaris has MD5 functions in libmd5.
	* exo/exo-toolbars-editor-dialog.c